-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Component/s: Win32SS
-
Labels:
-
Module:
-
Guilty Commit:0.4.14-dev-1134-g00adb1a https://git.reactos.org/?p=reactos.git;a=commit;h=00adb1a3f967ac7f5cd56b4c39df72a7b3814603
Reproduction steps
- be sure to be in classic theme
- run rapps
- search for "build env", you will get one hit
- resize the listviews header repeatedly in a way that will make the horizontal scrollbar start to appear, and end to appear, start to appear, and so on...
Observed result
at some point the scrollbars will not be drawn properly, but this does not always happen
0.4.15-dev-3147-g3bf7e3a is affected
0.4.15-dev-3147-g3bf7e3a_classic_rapps_listview_resize.webm
0.4.15-dev-3146-g6e9ff14 is affected as well
- blocks
-
CORE-14755 [proven WIn32SS!] ListView arrows should not flash upon autoscrolling a listView (happens in many NSIS installers)
-
- Resolved
-
- is blocked by
-
CORE-17777 Avoid possible Out-of-Bounds access in scrollbar.c
-
- Resolved
-