[0.4.14][NTUSER] Scrollbar.c, improve co_IntSetScrollInfo() CORE-17769, and an integer underflow

squashed backport of:
0.4.15-dev-2375-g ffea5152e607512f09efdb0bd02499e481877f59 integer underflow and
0.4.15-dev-3174-g dda9c3979e87223b66e61f0f936f46920221e509 CORE-17769

Fixes CORE-17769 'Rapps Listview manual resize may erroneously not draw the triangles sometimes'
This could happen for both: themed and unthemed.

CORE-17769 was a regression introduced by 0.4.14-dev-1134-g 00adb1a3f967ac7f5cd56b4c39df72a7b3814603

We don't really like the added state in form of the static variables,
but the patch works good from a pure testing-perspective.

Many Thanks to the patches author: Doug Lyons